js/src/tests/test262/built-ins/Error/prototype/toString/15.11.4.4-6-1.js
var
errObj
=
new
Error
(
)
;
assert
.
sameValue
(
errObj
.
toString
(
)
"
Error
"
'
errObj
.
toString
(
)
'
)
;
reportCompare
(
0
0
)
;
